@@ -14,6 +14,7 @@
    method ||= :post
    cancel_link = true if cancel_link.nil?
    submit_text ||= form_action
+   apply_text ||= :"#{form_action}_apply"
    body_partial ||= 'form'
    form_id = element_form_id(:action => form_action, :id => @record.try(:id))
 %>
@@ -44,8 +45,8 @@ end
   <%= render :partial => body_partial, :locals => { :columns => columns, :form_action => form_action, :scope => scope } %>
 
   <p class="form-footer">
-    <%= submit_tag as_(submit_text), :class => "submit" if !persistent || persistent == :optional || form_action == :create %>
-    <%= submit_tag as_(:apply), :class => "submit", :name => 'dont_close' if persistent && form_action != :create %>
+    <%= submit_tag as_(submit_text), :class => "submit" if !persistent || persistent == :optional %>
+    <%= submit_tag as_(apply_text), :class => "submit", :name => 'dont_close' if persistent %>
     <%= link_to(as_(:cancel), main_path_to_return, cancel_options) if cancel_link %>
     <%= loading_indicator_tag(:action => form_action, :id => @record.try(:id)) %>
     <%= render :partial => footer_extension, :locals => { :form_action => form_action } if footer_extension %>
