@@ -13,7 +13,8 @@ de:
     add: Hinzufügen
     add_existing: "Existierenden Eintrag hinzufügen"
     add_existing_model: "Existierende %{model} hinzufügen"
-    apply: Apply
+    update_apply: Apply
+    create_apply: Create and continue
     are_you_sure_to_delete: "Sind Sie sicher?"
     average: Average
     begins_with: Beginnt
