@@ -13,7 +13,8 @@ en:
     add: Add
     add_existing: "Add Existing"
     add_existing_model: "Add Existing %{model}"
-    apply: Apply
+    create_apply: Create and continue
+    update_apply: Apply
     are_you_sure_to_delete: "Are you sure you want to delete %{label}?"
     average: Average
     begins_with: "Begins with"
