@@ -13,7 +13,8 @@ es:
     add: Añadir
     add_existing: "Añadir Existente"
     add_existing_model: "Añadir %{model} Existente"
-    apply: Aplicar
+    create_apply: Crear y continuar    
+    update_apply: Aplicar
     are_you_sure_to_delete: "¿Estás seguro de que quieres borrar %{label}?"
     average: Media
     begins_with: "Empieza con"
