@@ -13,7 +13,8 @@ hu:
     add: Hozzáadás
     add_existing: "Meglevő hozzáadása"
     add_existing_model: "Meglevő %{model} hozzáadása"
-    apply: Apply
+    update_apply: Apply
+    create_apply: Create and continue
     are_you_sure_to_delete: "Are you sure you want to delete %{label}?"
     average: Average
     begins_with: "Begins with"
