@@ -42,7 +42,7 @@ module ActiveScaffold::Actions
           flash[:info] = as_(:created_model, :model => @record.to_label)
           if action = active_scaffold_config.create.action_after_create
             redirect_to params_for(:action => action, :id => @record.to_param)
-          elsif active_scaffold_config.create.persistent
+          elsif params[:dont_close]
             redirect_to params_for(:action => "new")
           else
             return_to_main
@@ -59,6 +59,10 @@ module ActiveScaffold::Actions
 
     def create_respond_to_js
       do_refresh_list if successful? && active_scaffold_config.create.refresh_list && !render_parent?
+      if successful? && params[:dont_close] && !render_parent?
+	@saved_record = @record
+	do_new
+      end
       render :action => 'on_create'
     end
 
